exports[`Checkbox renders 1`] = `
<styled.span
  background="transparent"
  onClick={[Function]} />
`;

exports[`Checkbox renders bg colors of type prop 1`] = `
<styled.span
  background="#84B2D2"
  onClick={[Function]} />
`;

exports[`Checkbox renders checked Icon 1`] = `
<styled.span
  background="transparent"
  onClick={[Function]}>
  <Styled(Icon)
    fill="#353535"
    id="check" />
</styled.span>
`;
